NGINX Ingress Controller/ingress-resource.yaml
#El kind: Ingress dicta que es un objeto del Ingress Resource. 
#Este Ingress Resource define una regla de L7 entrante para la ruta /hello al servicio hello-app en el puerto 8080.
#ejemplo ruta: http://external-ip-of-ingress-controller/hello
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-app
          servicePort: 8080
